Bug 30063 - [bisected] start X will modify brightness value to zero
Summary: [bisected] start X will modify brightness value to zero
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium major
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-07 04:04 UTC by fangxun
Modified: 2010-09-08 21:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg log file (21.81 KB, text/plain)
2010-09-07 04:04 UTC, fangxun
no flags Details

Description fangxun 2010-09-07 04:04:55 UTC
Created attachment 38505 [details]
Xorg log file

System Environment:
--------------------------
Arch:           i386
Platform:       pineview
Libdrm:         (master)2.4.21-18-g23287f05cf2443ddf9e028e29beb5bd30979c6cf
Mesa:           (master)35e01b79cb576503fc6c7cd5759b379c26ecb5ee
Xserver:        (master)xorg-server-1.9.0
Xf86_video_intel: (master)2.12.0-78-g00f6af2c8ec899258ffab60dc2d9d80c4d9daec8
Kernel: (for-linus)76be97c1fc945db08aae1f1b746012662d643e97


Bug detailed description:
-------------------------
Brightness value is non-zero value before start X. The value will be modified to zero after start X. Bisect find it is Xf86_video_intel component causes the problem. 38f940dfea494d3093236f065392c431be06ae6e is the first bad commit.
commit 38f940dfea494d3093236f065392c431be06ae6e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Aug 4 09:50:14 2010 +0100

    display: Tidy backlight initialisation

    Mostly whitespace and a single error-code fix.

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Reproduce steps:
----------------
1. start X
2. cat /sys/class/backlight/acpi_video0/brightness
Comment 1 Chris Wilson 2010-09-07 04:33:32 UTC
Can you confirm that a "git revert 38f940dfea494d3093236f065392c431be06ae6e" fixes the problem?
Comment 2 Chris Wilson 2010-09-07 04:58:44 UTC
commit 273d34fbc43e54a8539fbe7efc1dca66bbb4e6dc
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Sep 7 12:57:04 2010 +0100

    display: Query current level after finding max value.
    
    The current backlight value is clamped to the valid range [0, max] and
    so as we queried the value before setting the max, we forced the current
    backlight to 0 and so set it to be zero on initialising the display.
    
    Fixes:
    
      Bug 30063 - start X will modify brightness value to zero
      https://bugs.freedesktop.org/show_bug.cgi?id=30063
    
    which is a regression due to 38f940dfea494d3093236f065392c431be06ae6e.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 fangxun 2010-09-08 21:37:04 UTC
It works fine with the fixed commit. Thanks Chris.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.