display: Query current level after finding max value.

The current backlight value is clamped to the valid range [0, max] and
so as we queried the value before setting the max, we forced the current
backlight to 0 and so set it to be zero on initialising the display.

Fixes:

  Bug 30063 - start X will modify brightness value to zero
  https://bugs.freedesktop.org/show_bug.cgi?id=30063

which is a regression due to 38f940dfea494d3093236f065392c431be06ae6e.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>